Implement the relation_list in the delete_button

--- a/lib/dedalo/button_delete/css/button_delete.css
+++ b/lib/dedalo/button_delete/css/button_delete.css
@@ -1,1 +1,1 @@
-.css_wrap_button_delete{display:inline-block}#delete_dialog .modal-body{font-size:1.3em;text-transform:capitalize;font-weight:100;color:#5a5a5a}/*# sourceMappingURL=button_delete.css.map */
+.css_wrap_button_delete{display:inline-block}#delete_dialog .body_text{font-size:1.3em;text-transform:capitalize;font-weight:100;color:#5a5a5a}#delete_dialog .body_relations_container{margin-top:15px;padding-top:5px;border-top:1px solid #ebebeb;width:100%}/*# sourceMappingURL=button_delete.css.map */
