--- a/lib/dedalo/button_delete/css/button_delete.less
+++ b/lib/dedalo/button_delete/css/button_delete.less
@@ -16,11 +16,19 @@
 	#delete_dialog .btn {
 		//margin-left: 10px;
 	}
-	#delete_dialog .modal-body {
+	#delete_dialog .body_text {
 		font-size: 1.3em;
 		text-transform: capitalize;
 		font-weight: 100;
 		color: #5a5a5a;
+	}
+	#delete_dialog .body_relations_container{
+
+		margin-top: 15px;
+		padding-top: 5px;
+		border-top: 1px solid #ebebeb;
+		width: 100%;
+
 	}
 	#delete_dialog .modal-footer {
 		//text-align: right;
