--- a/lib/dedalo/tools/tool_lang/html/tool_lang_button.phtml
+++ b/lib/dedalo/tools/tool_lang/html/tool_lang_button.phtml
@@ -23,6 +23,7 @@
 	$html_tool .= "data-section_tipo=\"{$section_tipo}\" ";
 	$html_tool .= "data-parent=\"{$parent}\" ";
 	$html_tool .= "data-lang=\"{$lang}\" ";
+	$html_tool .= 'data-top_tipo="'.TOP_TIPO.'" ';
 	$html_tool .= "data-tab_id=\"img_lang_{$tipo}_{$parent}\" ";
 	$html_tool .= ">";
 
