--- a/lib/dedalo/tools/tool_indexation/html/tool_indexation_button.phtml
+++ b/lib/dedalo/tools/tool_indexation/html/tool_indexation_button.phtml
@@ -24,6 +24,7 @@
 		$html_tool .= "data-section_tipo=\"{$section_tipo}\" ";
 		$html_tool .= "data-tipo=\"{$tipo}\" ";
 		$html_tool .= "data-parent=\"{$parent}\" ";
+		$html_tool .= 'data-top_tipo="'.TOP_TIPO.'" ';
 		$html_tool .= "data-caller_id=\"{$parent}\" ";
 		$html_tool .= ">";
 		$html_tool .= "<span class='section_id_number'>";
@@ -34,13 +35,14 @@
 	}else{
 
 		$title	      = label::get_label('sin_referencias');
-		$html_tool   .= "<div class=\"icon_bs tool_warning link\" ";
-		$html_tool   .= "onclick=\"alert('$title')\" ";
-		$html_tool   .= "data-section_tipo=\"{$section_tipo}\" ";
-		$html_tool   .= "data-tipo=\"{$tipo}\" ";
-		$html_tool   .= "data-parent=\"{$parent}\" ";
-		$html_tool   .= "data-caller_id=\"{$parent}\" ";
-		$html_tool   .= "title=\"$title\"></div>";
+		$html_tool .= "<div class=\"icon_bs tool_warning link\" ";
+		$html_tool .= "onclick=\"alert('$title')\" ";
+		$html_tool .= "data-section_tipo=\"{$section_tipo}\" ";
+		$html_tool .= "data-tipo=\"{$tipo}\" ";
+		$html_tool .= "data-parent=\"{$parent}\" ";
+		$html_tool .= 'data-top_tipo="'.TOP_TIPO.'" ';
+		$html_tool .= "data-caller_id=\"{$parent}\" ";
+		$html_tool .= "title=\"$title\"></div>";
 	}
 
 	#$html_tool   .= label::get_label('tool_indexation');	#" Indexation";	
