--- a/lib/dedalo/tools/tool_structuration/html/tool_structuration_button.phtml
+++ b/lib/dedalo/tools/tool_structuration/html/tool_structuration_button.phtml
@@ -9,12 +9,13 @@
 
 		$title	  = label::get_label('abrir').' '.label::get_label('herramienta');
 		
-		$html_tool .= "<a href=\"javascript:void(0);\" class=\"id_column_buttons button_structuration link\" title=\"$title\" onclick=\"tool_common.open_{$tool_name}(this)\"
-		data-section_tipo=\"{$section_tipo}\"
-		data-tipo=\"{$tipo}\"
-		data-parent=\"{$parent}\"
-		data-caller_id=\"{$parent}\"
-		>";
+		$html_tool .= "<a href=\"javascript:void(0);\" class=\"id_column_buttons button_structuration link\" title=\"$title\" onclick=\"tool_common.open_{$tool_name}(this)\" ";
+		$html_tool .= "data-section_tipo=\"{$section_tipo}\" ";
+		$html_tool .= "data-tipo=\"{$tipo}\" ";
+		$html_tool .= "data-parent=\"{$parent}\" ";
+		$html_tool .= 'data-top_tipo="'.TOP_TIPO.'" ';
+		$html_tool .= "data-caller_id=\"{$parent}\" ";
+		$html_tool .= ">";
 			$html_tool .= "<span class='section_id_number'>";
 			$html_tool .= " $section_id ";
 			$html_tool .= "</span>";
@@ -22,13 +23,14 @@
 
 	}else{
 
-		$title	      = label::get_label('sin_referencias');
-		$html_tool   .= "\n<div class=\"icon_bs tool_warning link\" onclick=\"alert('$title')\"
-		data-section_tipo=\"{$section_tipo}\"
-		data-tipo=\"{$tipo}\"
-		data-parent=\"{$parent}\"
-		data-caller_id=\"{$parent}\"
-		title=\"$title\"></div>";
+		$title	    = label::get_label('sin_referencias');
+		$html_tool .= "<div class=\"icon_bs tool_warning link\" onclick=\"alert('$title')\" ";
+		$html_tool .= "data-section_tipo=\"{$section_tipo}\" ";
+		$html_tool .= "data-tipo=\"{$tipo}\" ";
+		$html_tool .= "data-parent=\"{$parent}\" ";
+		$html_tool .= 'data-top_tipo="'.TOP_TIPO.'" ';
+		$html_tool .= "data-caller_id=\"{$parent}\" ";
+		$html_tool .= "title=\"$title\"></div>";
 	}
 
 	#$html_tool   .= label::get_label('tool_structuration');	#" structuration";
