--- a/lib/dedalo/tools/tool_transcription/html/tool_transcription_page.phtml
+++ b/lib/dedalo/tools/tool_transcription/html/tool_transcription_page.phtml
@@ -27,13 +27,14 @@
 
 		#
 		# TOP_ID SELECTOR
+		# Iterate all inverse_locators anf filter of current section top tipo
 		if (isset($inverse_locators) && is_array($inverse_locators)) {
 			
 			$html .= "<div class=\"top_id_selector\">";
 
 			$html .= "<select id=\"top_id_selector\" class=\"custom_dropdown\"  >"; // onchange=\"$tool_name.update_top_id(this)\"
 			#$html .= " <option></option>";
-			$ar_inverse = $this->get_ar_inverse($inverse_locators);
+			$ar_inverse = $this->get_ar_inverse($inverse_locators);			
 			foreach ($ar_inverse as $current_id => $current_name) {
 				$selected = $current_id==TOP_ID ? 'selected' : '';
 				$html .= " <option value=\"$current_id\" {$selected}>$current_name</option>";
