--- a/lib/dedalo/tools/tool_add_component_data/html/tool_add_component_data_page.phtml
+++ b/lib/dedalo/tools/tool_add_component_data/html/tool_add_component_data_page.phtml
@@ -5,25 +5,21 @@
 	
 
 
-	$html    = "\n<!-- TOOL PAGE [tipo:$component_tipo] -->";
-	$html   .= "\n<div class=\"wrap_tool wrap_tool_add_component_data_page\" >";
-	$html   .= "\n<div class=\"content_data tool_add_component_data_text\" >";
+	$html    = "<!-- TOOL PAGE [tipo:$component_tipo] -->";
+	$html   .= "<div class=\"wrap_tool wrap_tool_add_component_data_page\" >";
+	$html   .= "<div class=\"content_data tool_add_component_data_text\" >";
 
 	
 
-
-		//Temporal section
+		// Temporal section
 		$html .= "<div class=\"section_temp_title\">".RecordObj_dd::get_termino_by_tipo($section_tipo)." <span class=\"notes\">[$section_tipo]</span></div>";
 		$html .= "<div class=\"wrap_section_temp\">";		
 		$html .= $temp_section_html;
 		$html .= "</div>";
 
 
-
-
 		// 'Se reemplazara el contenido del campo: %s en los %s registros actuales con el valor %s'
 		$dialog = label::get_label('tool_add_component_data_dialog');
-			#dump($dialog, ' dialog'.to_string());
 		
 		$label 			= "<label>$label</label>";
 		if (empty($valor)) {
@@ -39,13 +35,8 @@
 			$lang_text		= "<label>". lang::get_name_from_code( $lang, DEDALO_DATA_LANG ) ."</label>";
 		}
 		
-			#dump($lang, " lang ".to_string());
-
-		$html   .= sprintf($dialog, $label, $total_records, $valor, $lang_text );
-
-		# Cancel button
-		//$html .= "<div class=\"css_button_generic button_cancel\" onclick=\"top.$('#dialog_page_iframe').dialog('close');\">".label::get_label('cancelar')."</div>";
-
+		$html   .= sprintf($dialog, $label, $total_records, $valor, $lang_text);
+		
 		# Ok button
 		$html .= "<div class=\"css_button_generic button_replace\" onclick=\"tool_add_component_data.add_data(this)\"
 		data-component_tipo=\"$component_tipo\"
@@ -59,12 +50,12 @@
 
 		$html .= "<div id=\"tool_add_component_data_response\"></div>";
 	
-	$html .= "\n</div><!-- /content_data -->";
-	$html .= "\n</div><!-- /wrap_tool -->"; //wrap_tool
+	$html .= "</div><!-- /content_data -->";
+	$html .= "</div><!-- /wrap_tool -->"; //wrap_tool
 
 	
 	# INSPECTOR LOG TOOL
-	$html .= "\n<div id=\"inspector_log\" class=\"tool_transcription_inspector_log\"> </div>";
+	$html .= "<div id=\"inspector_log\" class=\"tool_transcription_inspector_log\"> </div>";
 
 
 
