Fix radio button width

--- a/lib/dedalo/component_publication/css/component_publication.less
+++ b/lib/dedalo/component_publication/css/component_publication.less
@@ -352,7 +352,7 @@
 	--------------------------------------- */
 		.radio_button_ul_list{
 			display: inline-block;
-			width: 80%;
+			width: auto;
 			vertical-align: middle;
 		}
 
