Fix portal inside widht to 100%

--- a/lib/dedalo/tools/tool_description/css/numisdata201.less
+++ b/lib/dedalo/tools/tool_description/css/numisdata201.less
@@ -63,6 +63,7 @@
 			display: grid;
 			grid-template-columns: 1fr 1fr;
 			grid-template-rows: 1.7fr 1fr;
+			width: 100%;
 		}
 	}
 	// Section group 3 (number of catalog)
