Removed check value is already used in tool description components

--- a/lib/dedalo/tools/tool_description/html/tool_description_page.phtml
+++ b/lib/dedalo/tools/tool_description/html/tool_description_page.phtml
@@ -52,18 +52,18 @@
 						$pseudo_locator_dato = $key;
 					}					
 										
-					if (in_array($pseudo_locator_dato, $ar_used_values)) {
+					#if (in_array($pseudo_locator_dato, $ar_used_values)) {
 						
-						$value  = "Opss. Target component value duplicate found! <div class=\"notes\">" .to_string($current_component_dato[0])."</div>";
-						$value .= "Info: <i>".$current_component->get_label()."</i> value in <i>".$section_label."</i>";
-						$value .= "<br><h5><a href=\"".DEDALO_LIB_BASE_URL."/main/?t=$section_tipo&id=$section_id\" target=\"_blank\">Go to section: ".$section_label."</a></h5>";
+					#	$value  = "Opss. Target component value duplicate found! <div class=\"notes\">" .to_string($current_component_dato[0])."</div>";
+					#	$value .= "Info: <i>".$current_component->get_label()."</i> value in <i>".$section_label."</i>";
+					#	$value .= "<br><h5><a href=\"".DEDALO_LIB_BASE_URL."/main/?t=$section_tipo&id=$section_id\" target=\"_blank\">Go to section: ".$section_label."</a></h5>";
 					
-					}else{					
+					#}else{					
 
 						$value = $current_component->get_html();
-					}
+					#}
 
-					$ar_used_values[] = $pseudo_locator_dato; 
+					#$ar_used_values[] = $pseudo_locator_dato; 
 
 					#
 					# Component wrap
