fix the section_tab use

--- a/lib/dedalo/section_tab/css/section_tab.less
+++ b/lib/dedalo/section_tab/css/section_tab.less
@@ -9,8 +9,10 @@
 	> section {
 		//background-color: #A3E1BF;
 		display: none;
-		padding: 20px 0 0;
-		border-top: 1px solid #ddd;
+		padding-top: 5px;
+		border: 1px solid #ddd;
+		background-color: rgba(249,249,249,0.65);
+		width: 100%;
 	}
 
 	> input {
@@ -41,6 +43,7 @@
 		border: 1px solid #ddd;
 		border-top: 2px solid orange;
 		border-bottom: 1px solid #fff;
+		background-color: rgba(249,249,249,0.65);
 	}
 
 }//end css_section_tab_content
