--- a/lib/dedalo/component_autocomplete/html/component_autocomplete_tool_description.phtml
+++ b/lib/dedalo/component_autocomplete/html/component_autocomplete_tool_description.phtml
@@ -5,7 +5,10 @@
 	# html_delimiter
 	print component_common_draw::html_delimiter($component_name, $tipo, $parent, $label, 'in', $modo, $lang);
 
-	print "<div class=\"wrap_component css_wrap_autocomplete wrap_autocomplete_{$modo}\" id=\"{$id_wrapper}\" ";
+	$component_alias_css = isset($propiedades->alias_component_tipo) ? ' alias_'.$propiedades->alias_component_tipo : '';
+
+	print '<div class="wrap_component css_wrap_autocomplete wrap_component_'.$modo.' wrap_component_'.$tipo. $component_alias_css.'" ';
+	print "id=\"{$id_wrapper}\" ";
 	print "data-tipo=\"{$tipo}\" ";
 	print "data-lang=\"{$lang}\" ";
 	print "data-parent=\"{$parent}\" ";
