fix changes to support update in geolocation

--- a/lib/dedalo/section_group/css/section_group.less
+++ b/lib/dedalo/section_group/css/section_group.less
@@ -60,6 +60,11 @@
 		padding: 0;
 		margin-top: 3px;
 		margin-left: 3px;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-o-user-select: none;
+		user-select: none;
 	}
 
 /* DIV CONTENIDO DEL GRUPO (COMPONENTES)
