--- a/lib/dedalo/component_iri/css/component_iri.less
+++ b/lib/dedalo/component_iri/css/component_iri.less
@@ -29,6 +29,10 @@
 		border-color: #d47941;
 	}
 
+	.css_iri_off{
+		display: none;
+	}
+
 	/* LANG
 	------------------------------------------------------- */
 	.css_wrap_iri .css_lang_image_delete {
