--- a/lib/dedalo/tools/tool_image_versions/css/tool_image_versions.less
+++ b/lib/dedalo/tools/tool_image_versions/css/tool_image_versions.less
@@ -92,10 +92,7 @@
 }
 
 
-
 .thumb_container {
-	/*overflow: auto;*/
-	//width: 730px;
 	height: 415px;
 	position: relative;
 	}
@@ -110,6 +107,13 @@
 	    left: 0;  
 	    right: 0;  
 	    margin: auto;  
+	}
+
+	.external_source{
+		display: flex;
+		border-bottom: 1px solid #ededed;
+	}.external_source .wrap_component{
+		background-color: unset !important;
 	}
 
 
