--- a/lib/dedalo/media_engine/html/img.phtml
+++ b/lib/dedalo/media_engine/html/img.phtml
@@ -7,17 +7,17 @@ switch ($m) {
 	case 'image':
 		# ImageObj
 		include(DEDALO_LIB_BASE_PATH . '/media_engine/class.ImageObj.php');
-		$image_id 		= $SID;	
-		$ImageObj 		= new ImageObj($image_id, $quality, $aditional_path, $initial_media_path);
+		$image_id 		= $SID;
+		$ImageObj 		= new ImageObj($image_id, $quality, $aditional_path, $initial_media_path, $external_source);
 		$source 		= $ImageObj->get_local_full_path();
-			#dump($source,'source');
-
-		if (!file_exists($source)) {
+		$file_exists 	= $ImageObj->get_file_exists();
+	
+		if (!$file_exists) {
 			#return null;#exit();
 			$fx = 'crop';
 			$source = DEDALO_LIB_BASE_PATH . '/themes/default/0.jpg';
 		}
-		#dump($source,'$source');
+
 
 		# Thumb obj
 		$thumb = new Thumb($source);
