Fixed issue with custom tabs of selected fragment_info

--- a/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
+++ b/lib/dedalo/tools/tool_indexation/css/tool_indexation.less
@@ -224,8 +224,14 @@ li.tool_indexation_index_list_termino {
 	}
 	.section_tab .btn {
 		margin: 15px;
-		margin-left: 1px;
+		//margin-left: 1px;
 	}
+
+	#indexation_page_list .section_tab_label {
+		float: right;
+	}
+	
+	
 
 
 
