--- a/lib/dedalo/tools/tool_structuration/css/tool_structuration.less
+++ b/lib/dedalo/tools/tool_structuration/css/tool_structuration.less
@@ -239,6 +239,9 @@ li.tool_indexation_index_list_termino {
 		margin: 15px;
 		margin-left: 1px;
 	}
+	#indexation_page_list .section_tab_label {
+		float: right;
+	}
 
 
 
