Fix the behavior fir link of external source for image

--- a/lib/dedalo/component_check_box/html/component_check_box_dataframe_edit.phtml
+++ b/lib/dedalo/component_check_box/html/component_check_box_dataframe_edit.phtml
@@ -89,7 +89,7 @@
 				#
 				# LABEL				
 				#$html_content .= "<label for=\"$input_id\" class=\"css_check_box_rotulo\" {$required_code}>$rotulo</label>";
-				$html_content .= "<label for=\"$input_id\" class=\"css_check_box_rotulo\" {$required_code}>?</label>";
+				$html_content .= "<label for=\"$input_id\" class=\"css_check_box_rotulo\" {$required_code}>$dataframe_value</label>";
 
 				$html_content .= "</li>";
 				$i++;
