--- a/lib/dedalo/component_image/html/component_image_thumb.phtml
+++ b/lib/dedalo/component_image/html/component_image_thumb.phtml
@@ -12,7 +12,7 @@
 					
 		case ($permissions>=1) :
 					
-				$html_content .= "\n <img class=\"css_image\"
+				$html_content .= "\n <img class=\"wrap_component css_image \"
 				src=\"$image_url\"
 				id=\"img_$identificador_unico\"
 				data-image_id=\"$image_id\"
