--- a/lib/dedalo/component_iri/css/component_iri.less
+++ b/lib/dedalo/component_iri/css/component_iri.less
@@ -128,7 +128,32 @@
 	    opacity: 1;	    
 	}
 
+	.btn_reload_source_component{
+		width: 26px;
+		top: -23px;
+		margin-top: 0;
+		padding: 3px;
+		padding-right: 5px;
+		padding-left: 5px;		
+		background-image: none;
+		box-shadow: none;
+		z-index: 1;
+	}
 
+	.css_reload_source_component {
+		width: 14px;
+		height: 14px;
+		line-height: 14px;
+		vertical-align: text-top;
+		background-image: url(../../themes/default/svg_icons.svg);
+		background-position: -216px -22px;
+		background-size: 474px 184px;
+		background-repeat: no-repeat;
+		list-style: none;
+		position: relative;
+		cursor: pointer;
+		opacity: 1;
+	}
 
 	.css_wrap_iri .input-group {
 		width: 100%;
@@ -137,6 +162,20 @@
 	.css_wrap_iri ul {
 		width: 100%;
 	}
+
+	.css_wrap_iri .input-group .dataframe_container li {
+		display: flex;
+		align-items: center;
+	}
+
+	.css_wrap_iri .input-group .dataframe_container li input {
+		margin: 0;
+	}
+
+	.css_wrap_iri .input-group .dataframe_container li label {
+		padding-right: 0;
+	}
+
 
 
 
