--- a/lib/dedalo/component_iri/html/component_iri_edit.phtml
+++ b/lib/dedalo/component_iri/html/component_iri_edit.phtml
@@ -16,6 +16,7 @@
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='{$dato_json}' ";
 	print "data-component_name=\"{$component_name}\" ";
+	print "data-source_for_component=\"{$source_for_component}\" ";
 	print "data-component_info='{$component_info}' ";
 	print ">";
 	
@@ -59,6 +60,7 @@
 				}
 				#IRI content
 				$html_content .= "<div class=\"css_iri_content\">";
+
 
 
 					if(empty($dato)){
@@ -118,7 +120,6 @@
 						$html_content .= "data-parent=\"{$parent}\" ";
 						$html_content .= "data-lang=\"{$lang}\" ";
 						$html_content .= "data-mandatory='{$mandatory_json}' ";
-						$html_content .= "data-source_for_component=\"{$source_for_component}\" ";
 						$html_content .= "value=\"{$value_iri}\" ";
 						$html_content .= "title=\"$html_title\" ";
 						$html_content .= "name=\"{$input_name}\" ";
@@ -135,19 +136,35 @@
 						$html_content .= "<div class=\"link css_iri_link\"></div>";
 						$html_content .= "</a>";
 
+						
+
+						# DATAFRAME MANAGER
+						if (isset($ar_dataframe_obj[$key])) {
+							$html_content .= $ar_dataframe_obj[$key]->get_html();
+						}
+
 						$html_content .= "</li>";
+						
 						
 					}//end foreach
 					$html_content .= "</ul>";
 
 					# Button add
-
-					$css_optional='';
+					$css_optional_mv='';
 					if(!$multiple_value){
-						$css_optional='css_iri_off';
+						$css_optional_mv='css_iri_off';
 					}
-					$html_content .= "<div class=\"css_button_generic btn_add_iri $css_optional\" onclick=\"component_iri.add_iri(this)\">";
+					$html_content .= "<div class=\"css_button_generic btn_add_iri $css_optional_mv\" onclick=\"component_iri.add_iri(this)\">";
 					$html_content .= "<div class=\"link css_iri_add\"></div>";
+					$html_content .= "</div>";
+
+					# Button reload_source_component
+					$css_optional_rc='';
+					if(!$source_for_component){
+						$css_optional_rc='css_iri_off';
+					}
+					$html_content .= "<div class=\"css_button_generic btn_reload_source_component $css_optional_rc\" onclick=\"component_iri.reload_source_component(this)\">";
+					$html_content .= "<div class=\"link css_reload_source_component\"></div>";
 					$html_content .= "</div>";
 					
 
