fix the label of components - font and style

--- a/lib/dedalo/component_common/css/component_common.less
+++ b/lib/dedalo/component_common/css/component_common.less
@@ -198,16 +198,17 @@ input[type="text"], input[type="password"], input[type="url"],textarea {
 	}
 	/* LABEL IN WRAP COMPONENT CONTEXT */
 	.wrap_component .label {
-		width: 17%;
+		//width: 17%;
 		//max-width: 90px;
-		max-width: 16.66%;
+		//max-width: 16.66%;
+		letter-spacing: 0.5px;
 		text-overflow: ellipsis;
 		overflow: hidden;
 		white-space: nowrap;
 		cursor:default;
 		//transition: all 0.3s ease;
 		//font-weight: bold;
-		font-family: "Oxygen-Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-family: "Oxygen", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		//font-weight: 300;
 
 		// Sweet labels 11-01-2018 (Manolo's request)
