--- a/lib/dedalo/component_relation_model/html/component_relation_model_search.phtml
+++ b/lib/dedalo/component_relation_model/html/component_relation_model_search.phtml
@@ -3,10 +3,11 @@
 	# VISUALIZADOR HTML	
 
 	print "<div class=\"wrap_component css_wrap_relation_model tooltip_active\" ";
-	print "data-component_name=\"{$component_name}\" ";
-	print "data-modo=\"{$modo}\" ";
-	print "data-dato='".json_encode($dato)."' ";
 	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
+	print "data-component_name=\"{$component_name}\" ";
+	print "data-component_info='{$component_info}' ";
+	print "data-modo=\"{$modo}\" ";
+	print "data-dato='".json_encode($dato)."' ";	
 	print "data-search_tipos='".json_encode($search_tipos)."' ";
 	print ">";
 	
@@ -15,48 +16,51 @@
 	
 	# CONTENIDO (INPUT)
 	$html_content = '';
-	switch($permissions) {
+	switch(true) {
 			
-		case 0	:	$html_content .= "";
-					break;
-						
+		case ($permissions===0)	:
+				$html_content .= "";
+				break;						
 		
-		case ($permissions>=1)	:
+		case ($permissions>=1) :
 
-					# COMPARISON OPERATORS
-					$html_content .= operator::get_search_comparison_operators_html($tipo,$ar_comparison_operators);
-					
-					# SELECT
-					$html_content .= "<select class=\"css_relation_model\" name=\"{$search_input_name}\" ";
-					$html_content .= "data-tipo=\"{$tipo}\" ";
-					$html_content .= "title=\"$html_title\" ";
-					$html_content .= ">";
+				$html_content .= '<input class="q_operator" type="text" value="'.$q_operator.'" ';
+				$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
+				$html_content .=' />';
 
-						if(empty($dato)) {
-							$checked = 'selected';
-						}else{
-							$checked = "";
-						}
-						$html_content .= "<option value=\"\" {$checked}> </option>";
-						
-						foreach ($ar_list_of_values->result as $value => $rotulo) {
-							
-							if( $dato == $value) {
-								$checked = 'selected';
-							}else {
-								$checked = "";
-							}
-							$html_content .= "<option value='$value' {$checked}> {$rotulo}</option>";
-						}					
-					$html_content .= "</select>";	
-					
+				# SELECT
+				$html_content .= "<select class=\"css_relation_model\" name=\"{$search_input_name}\" ";
+				$html_content .= "onchange=\"component_common.fix_dato(this,'{$component_name}')\" ";
+				$html_content .= "title=\"$html_title\" ";
+				$html_content .= "data-tipo=\"{$tipo}\" ";				
+				$html_content .= ">";
 
-					# LOGICAL OPERATORS
-					$html_content .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);
+					# Empty option
+					$html_content .= "<option value=\"\"> </option>";					
+					foreach ($ar_list_of_values->result as $value => $label) {
 
-					if(SHOW_DEBUG===true) {
-						$html_content .= "<span class=\"debug_info\">$search_input_name</span>";
-					}											
+						$value   = (string)$value;
+						$locator = (object)json_handler::decode($value);	# Locator is json encoded object
+
+						# Add fixed type
+						$locator->type = DEDALO_RELATION_TYPE_MODEL_TIPO;
+
+						$founded  = false;
+						if (!empty($dato)) {
+							$founded  = locator::in_array_locator( $locator, $ar_locator=$dato, $ar_properties=array('section_id','section_tipo','type') );
+						}						
+						$selected = $founded ? 'selected' : '';
+
+						$locator_json = json_encode($locator);
+
+						$html_content .= "<option value='". $locator_json ."' {$selected}>";
+						$html_content .= $label;
+												
+						$html_content .= "</option>";
+					}
+
+				$html_content .= "</select>";
+				break;									
 	}
 	
 	# Prepare content to show in page
