--- a/lib/dedalo/component_relation_struct/html/component_relation_struct_search.phtml
+++ b/lib/dedalo/component_relation_struct/html/component_relation_struct_search.phtml
@@ -2,46 +2,47 @@
 
 	# VISUALIZADOR HTML	
 	
-	print "<div class=\"wrap_component css_wrap_relation_index tooltip_active\" ";
+	print "<div class=\"wrap_component css_wrap_relation_struct tooltip_active in_search_mode\"id=\"{$id_wrapper}\" ";
+	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
+	print "data-tipo=\"{$tipo}\" ";
+	print "data-section_tipo=\"{$section_tipo}\" ";
 	print "data-component_name=\"{$component_name}\" ";
+	print "data-component_info='{$component_info}' ";
 	print "data-modo=\"{$modo}\" ";
 	print "data-dato='".json_encode($dato)."' ";
-	print 'title="'.search_development2::search_options_title( $this->search_operators_info() ).'" ';
 	print ">";
 	
 	# ETIQUETA (LABEL)
 	$html_label = component_common_draw::draw_label($this);
 	
 	# CONTENIDO (INPUT)
-	$html_contenido = '';
-	switch($permissions) {
+	$html_content = '';
+	switch(true) {
 			
-		case 0	:	$html_contenido .= "";
-					break;
+		case ($permissions===0) :
+				$html_content .= "";
+				break;
 						
 		
 		case ($permissions>=1)	:
 
-					# COMPARISON OPERATORS
-					$html_contenido .= operator::get_search_comparison_operators_html($tipo,$ar_comparison_operators);
-
+				# Q_OPERATOR
+				$html_content .= '<input class="q_operator" type="text" value="'.$q_operator.'" ';
+				$html_content .= 'onchange="component_common.fix_dato(this,\''.$component_name.'\')" ';
+				$html_content .=' />';
 					
-					# INPUT
-					$html_contenido .= "<input class=\"css_relation_index\" type=\"text\" name=\"{$search_input_name}\" value=\"\"/> ";
-					
-
-					# LOGICAL OPERATORS
-					$html_contenido .= operator::get_search_logical_operators_html($tipo,$ar_logical_operators);
-											
+				# INPUT
+				#$html_content .= "<input class=\"css_relation_index\" type=\"text\" name=\"{$search_input_name}\" value=\"\"/> ";
+				
 	}
 	
 	# Prepare content to show in page
-	tools::prepare_content($html_contenido);
+	tools::prepare_content($html_content);
 	
 
 	# PRINT HTML
 	print $html_label;
-	print $html_contenido;	
+	print $html_content;	
 
 	
 	print "</div>"; //wrap
