Changed the behavior of the Deprecated label message

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -780,11 +780,19 @@ mark.row_debug_info {
 		label.label_warning span {
 			//cursor: help;
 			font-size: 10px;
-			color: #FF3900;
+			//color: #FF3900;
 			opacity: 0.85;
 			padding-left: 1px;
 			margin-right: 5px;
 		}
+		label.label_warning_deprecated span {
+			color: #FF3900;
+		}
+
+		label.label_warning_alternative span {
+			color: inherit;
+		}
+
 
 
 
